# AgentForge

./: .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  Contributing.md  MANIFEST.in  OPENAI_CODEX_OAUTH_SPEC.md  README.md  REQUIREMENTS.txt  Revised_README.md  _config.yml  config.ini  dir.py  embedding_utils.py  hi.py  hi_old.py  index.html  main.py  oobabooga_api.py  openai_api.py  outline.yaml  pinecone_utils.py  pyproject.toml  pytest.ini  requirements.txt  robots.txt  salience.py  search.py  setup.py  task_agents.py  test_send.py
.agentforge/: .env.example
APIs/: oobabooga_api.py  openai_api.py
About/: APIDocumentation.md
Agents/: agent_template.py  analyst_agent.py  context_agent.py  execution_agent.py  heuristic_check.py  heuristic_check_agent.py  heuristic_comparator_agent.py  heuristic_reflection_agent.py  heuristic_reflexion_agent.py  prioritization_agent.py  prioritization_agent.py.bak  salience_agent.py  status_agent.py  summarization_agent.py  task_creation_agent.py
Config/: .env  api_keys.ini  config.ini
Examples/: salience.py
Files/: update.bat
Logs/: log.txt  log.txt.bak  logger_config.py
Personas/: default.json  defaultbooga.json  load_persona_data.py
SalienceBot/: salience.py
Sandbox/: KGT Test.py  KGTest.py  Reflexion - Language Agents with Verbal Reinforcement Learning.txt  RunTestAgent.py  RunTestFlow.py  TestActions.py  TestChroma.py  TestLLM.py  TestLearn.py  TestMerge.py  chat_with_docs.py  chatbot.py  claud3test.py  dbcreate.py  gemini_with_vision.py  kgtest.py
Test/: KGT Test.py
Tools/: google_search.py  webscrap.py  (+2 more)
(+845 files in other folders)
